# redmapper

./: .gitignore  .travis.yml  Dockerfile  MANIFEST.in  README.md  pyproject.toml  redmapper_read_config.py  requirements.txt  setup.cfg  setup.py
how-to/: README.md  cal_example.yml
redmapper/: .redsequence.py.swp  .utilities.py.swo  .utilities.py.swp  .zred_color.py.swp  __init__.py  _version.py  background.py  catalog.py  centering.py  cluster.py  cluster_runner.py  color_background.py  config.py  configuration.py  depth_fitting.py  depthmap.py  fitters.py  galaxy.py  mask.py  parsl_templates.py  plotting.py  randoms.py  redmapper_read_config.py  redmapper_run.py  redsequence.py  run_colormem.py  run_firstpass.py  run_likelihoods.py  run_percolation.py  run_randoms.py  run_randoms_zmask.py  run_zscan.py  runcat.py  tags  utilities.py  volumelimit.py  zlambda.py  zred_color.py  zred_runner.py
tests/: README.md  test_advanced.py  test_apply_errormodels.py  test_background.py  test_basic.py  test_centering.py  test_centeringcal.py  test_chisq.py  test_cluster.py  test_cluster_fit.py  test_clustercatalog.py  test_color_background.py  test_config.py  test_consolidate.py  test_depthfit.py  test_depthmap.py  test_fitters.py  test_galaxycatalog.py  test_healsparse_conversions.py  test_logging.py  test_mask.py  test_redmagic.py  test_redmapper_randoms.py  test_redmapper_run.py  test_redsequence.py  test_redsequencecal.py  test_run_colormem.py  test_runcat.py  test_selectred.py  test_selectspecred.py  test_selectspecseeds.py  test_solver.py  test_subpix_indices.py  (+6 more)
(+152 files in other folders)
