[metadata]
name = redmapper
description = Python implementation of redMaPPer cluster finder
long_description = file: README.md
long_description_content_type = text/markdown
author = Eli Rykoff
url = https://github.com/erykoff/redmapper
author_email = erykoff@stanford.edu
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.8
install_requires =
  astropy
  matplotlib
  pyyaml
  fitsio
  esutil
  numpy<2
  scipy
  healsparse
  hpgeom
tests_require =
  pytest
zip_safe = True

[options.packages.find]
exclude =
  tests

[options.package_data]
redmapper = data/initcolors/*.fit, data/mstar/*.fit
